Antlr/CParser.py
# Generated from C.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'printf'", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'int'", "'char'", "'bool'", 
                     "'float'", "'const'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMPOPS", "LOGICOPS", "TYPE", "UNARYOPS", 
                      "TERMOPS", "FACTOROPS", "SPECIALUNARY", "INT", "CHAR", 
                      "BOOL", "FLOAT", "CONST", "EQUALS", "POINTER", "BOOLLITERAL", 
                      "IDENTIFIER", "INTLITERAL", "FLOATLITERAL", "CHARLITERAL", 
                      "SINGLECOMMENT", "MULTICOMMENT", "DIGIT", "WS" ]

    RULE_run = 0
    RULE_line = 1
    RULE_statement = 2
    RULE_print = 3
    RULE_comment = 4
    RULE_assignment = 5
    RULE_declaration = 6
    RULE_instantiation = 7
    RULE_const_instantiation = 8
    RULE_logicexpression = 9
    RULE_boolexpression = 10
    RULE_term = 11
    RULE_factor = 12
    RULE_element = 13
    RULE_literal = 14

    ruleNames =  [ "run", "line", "statement", "print", "comment", "assignment", 
                   "declaration", "instantiation", "const_instantiation", 
                   "logicexpression", "boolexpression", "term", "factor", 
                   "element", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    COMPOPS=5
    LOGICOPS=6
    TYPE=7
    UNARYOPS=8
    TERMOPS=9
    FACTOROPS=10
    SPECIALUNARY=11
    INT=12
    CHAR=13
    BOOL=14
    FLOAT=15
    CONST=16
    EQUALS=17
    POINTER=18
    BOOLLITERAL=19
    IDENTIFIER=20
    INTLITERAL=21
    FLOATLITERAL=22
    CHARLITERAL=23
    SINGLECOMMENT=24
    MULTICOMMENT=25
    DIGIT=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.LineContext)
            else:
                return self.getTypedRuleContext(CParser.LineContext,i)


        def getRuleIndex(self):
            return CParser.RULE_run

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun" ):
                listener.enterRun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun" ):
                listener.exitRun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRun" ):
                return visitor.visitRun(self)
            else:
                return visitor.visitChildren(self)




    def run(self):

        localctx = CParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_run)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.line()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 66912652) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CParser.StatementContext,0)


        def comment(self):
            return self.getTypedRuleContext(CParser.CommentContext,0)


        def getRuleIndex(self):
            return CParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = CParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 7, 8, 16, 18, 19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.comment()


                pass
            elif token in [24, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(CParser.AssignmentContext,0)


        def declaration(self):
            return self.getTypedRuleContext(CParser.DeclarationContext,0)


        def logicexpression(self):
            return self.getTypedRuleContext(CParser.LogicexpressionContext,0)


        def print_(self):
            return self.getTypedRuleContext(CParser.PrintContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.assignment()
                self.state = 43
                self.match(CParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.declaration()
                self.state = 46
                self.match(CParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.logicexpression()
                self.state = 49
                self.match(CParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.print_()
                self.state = 52
                self.match(CParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def literal(self):
            return self.getTypedRuleContext(CParser.LiteralContext,0)


        def getRuleIndex(self):
            return CParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = CParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(CParser.T__1)
            self.state = 57
            self.match(CParser.T__2)
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.state = 58
                self.match(CParser.IDENTIFIER)
                pass
            elif token in [19, 21, 22, 23]:
                self.state = 59
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 62
            self.match(CParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLECOMMENT(self):
            return self.getToken(CParser.SINGLECOMMENT, 0)

        def MULTICOMMENT(self):
            return self.getToken(CParser.MULTICOMMENT, 0)

        def getRuleIndex(self):
            return CParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = CParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not(_la==24 or _la==25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CParser.DeclarationContext,0)


        def EQUALS(self):
            return self.getToken(CParser.EQUALS, 0)

        def logicexpression(self):
            return self.getTypedRuleContext(CParser.LogicexpressionContext,0)


        def const_instantiation(self):
            return self.getTypedRuleContext(CParser.Const_instantiationContext,0)


        def getRuleIndex(self):
            return CParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = CParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 18, 20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.declaration()
                self.state = 67
                self.match(CParser.EQUALS)
                self.state = 68
                self.logicexpression()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.const_instantiation()
                self.state = 71
                self.match(CParser.EQUALS)
                self.state = 72
                self.logicexpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instantiation(self):
            return self.getTypedRuleContext(CParser.InstantiationContext,0)


        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def POINTER(self):
            return self.getToken(CParser.POINTER, 0)

        def getRuleIndex(self):
            return CParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaration)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.instantiation()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(CParser.IDENTIFIER)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(CParser.POINTER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstantiationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(CParser.TYPE, 0)

        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CParser.RULE_instantiation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstantiation" ):
                listener.enterInstantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstantiation" ):
                listener.exitInstantiation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstantiation" ):
                return visitor.visitInstantiation(self)
            else:
                return visitor.visitChildren(self)




    def instantiation(self):

        localctx = CParser.InstantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_instantiation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(CParser.TYPE)
            self.state = 82
            self.match(CParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_instantiationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CParser.CONST, 0)

        def TYPE(self):
            return self.getToken(CParser.TYPE, 0)

        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CParser.RULE_const_instantiation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_instantiation" ):
                listener.enterConst_instantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_instantiation" ):
                listener.exitConst_instantiation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_instantiation" ):
                return visitor.visitConst_instantiation(self)
            else:
                return visitor.visitChildren(self)




    def const_instantiation(self):

        localctx = CParser.Const_instantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_const_instantiation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(CParser.CONST)
            self.state = 85
            self.match(CParser.TYPE)
            self.state = 86
            self.match(CParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicexpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolexpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.BoolexpressionContext)
            else:
                return self.getTypedRuleContext(CParser.BoolexpressionContext,i)


        def LOGICOPS(self):
            return self.getToken(CParser.LOGICOPS, 0)

        def logicexpression(self):
            return self.getTypedRuleContext(CParser.LogicexpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_logicexpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicexpression" ):
                listener.enterLogicexpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicexpression" ):
                listener.exitLogicexpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicexpression" ):
                return visitor.visitLogicexpression(self)
            else:
                return visitor.visitChildren(self)




    def logicexpression(self):

        localctx = CParser.LogicexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logicexpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 88
                self.match(CParser.T__2)


            self.state = 91
            self.boolexpression()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 92
                self.match(CParser.LOGICOPS)
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.boolexpression()
                    pass

                elif la_ == 2:
                    self.state = 94
                    self.logicexpression()
                    pass




            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 99
                self.match(CParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolexpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.TermContext)
            else:
                return self.getTypedRuleContext(CParser.TermContext,i)


        def COMPOPS(self):
            return self.getToken(CParser.COMPOPS, 0)

        def boolexpression(self):
            return self.getTypedRuleContext(CParser.BoolexpressionContext,0)


        def getRuleIndex(self):
            return CParser.RULE_boolexpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolexpression" ):
                listener.enterBoolexpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolexpression" ):
                listener.exitBoolexpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolexpression" ):
                return visitor.visitBoolexpression(self)
            else:
                return visitor.visitChildren(self)




    def boolexpression(self):

        localctx = CParser.BoolexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_boolexpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.term()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 103
                self.match(CParser.COMPOPS)
                self.state = 106
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 104
                    self.term()
                    pass

                elif la_ == 2:
                    self.state = 105
                    self.boolexpression()
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.FactorContext)
            else:
                return self.getTypedRuleContext(CParser.FactorContext,i)


        def TERMOPS(self):
            return self.getToken(CParser.TERMOPS, 0)

        def term(self):
            return self.getTypedRuleContext(CParser.TermContext,0)


        def getRuleIndex(self):
            return CParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = CParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.factor()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 111
                self.match(CParser.TERMOPS)
                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 112
                    self.factor()
                    pass

                elif la_ == 2:
                    self.state = 113
                    self.term()
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.ElementContext)
            else:
                return self.getTypedRuleContext(CParser.ElementContext,i)


        def FACTOROPS(self):
            return self.getToken(CParser.FACTOROPS, 0)

        def factor(self):
            return self.getTypedRuleContext(CParser.FactorContext,0)


        def getRuleIndex(self):
            return CParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = CParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.element()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 119
                self.match(CParser.FACTOROPS)
                self.state = 122
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 120
                    self.element()
                    pass

                elif la_ == 2:
                    self.state = 121
                    self.factor()
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(CParser.LiteralContext,0)


        def IDENTIFIER(self):
            return self.getToken(CParser.IDENTIFIER, 0)

        def POINTER(self):
            return self.getToken(CParser.POINTER, 0)

        def boolexpression(self):
            return self.getTypedRuleContext(CParser.BoolexpressionContext,0)


        def UNARYOPS(self):
            return self.getToken(CParser.UNARYOPS, 0)

        def SPECIALUNARY(self):
            return self.getToken(CParser.SPECIALUNARY, 0)

        def getRuleIndex(self):
            return CParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = CParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 126
                self.match(CParser.UNARYOPS)


            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 21, 22, 23]:
                self.state = 129
                self.literal()
                pass
            elif token in [20]:
                self.state = 130
                self.match(CParser.IDENTIFIER)
                pass
            elif token in [18]:
                self.state = 131
                self.match(CParser.POINTER)
                pass
            elif token in [3]:
                self.state = 132
                self.match(CParser.T__2)
                self.state = 133
                self.boolexpression()
                self.state = 134
                self.match(CParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 138
                self.match(CParser.SPECIALUNARY)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLLITERAL(self):
            return self.getToken(CParser.BOOLLITERAL, 0)

        def INTLITERAL(self):
            return self.getToken(CParser.INTLITERAL, 0)

        def FLOATLITERAL(self):
            return self.getToken(CParser.FLOATLITERAL, 0)

        def CHARLITERAL(self):
            return self.getToken(CParser.CHARLITERAL, 0)

        def getRuleIndex(self):
            return CParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = CParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15204352) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





